# fz

./: .gitignore  ALGORITHM_INTERFACE.md  BASH_REQUIREMENT.md  CI_CYGWIN_LISTING_ENHANCEMENT.md  CI_WINDOWS_BASH_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  CYGWIN_TO_MSYS2_MIGRATION.md  DebugCalc.sh  FUNZ_UDP_DISCOVERY.md  FZD_README.md  MSYS2_MIGRATION_CLEANUP.md  NEWS.md  PerfectGazPressure.sh  README.md  SHELL_PATH_IMPLEMENTATION.md  WINDOWS_CI_PACKAGE_FIX.md  WINDOWS_INTERRUPT_GUIDE.md  demo_funz_workflow.sh  examples  fz.py  llms.txt  pyproject.toml  pytest.ini  setup.py  test_funz_udp_discovery.py  test_windows_interrupt.py
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md
completions/: README.md  fz-completion.bash  fz-completion.zsh
context/: INDEX.md  README.md  calculators.md  core-functions.md  formulas-and-interpreters.md  funz-protocol.md  fzd_content_format.md  overview.md  quick-examples.md  shell-path.md  syntax-guide.md
doc/: INDEX.md  README.md  calculators.md  core-functions.md  funz-protocol.md  installing-models.md  model-definition.md  overview.md  parallel-and-caching.md  shell-path.md
docs/: FZD_CONTENT_FORMATS.md
examples/: 01_getting_started.ipynb  02_variable_syntax_and_formulas.ipynb  03_parametric_studies_fzr.ipynb  04_design_of_experiments_fzd.ipynb  05_caching_and_advanced.ipynb  algorithm_options_example.md  dataframe_input.md  examples.md  fz_modelica_projectile.ipynb  fzd_example.md  fzd_example.py  fzi_formulas_example.py  fzi_static_objects_example.py  generate_notebooks.py  java_funz_syntax_example.py  r_interpreter_example.md  shell_path_example.md  variable_substitution.md  vector_outputs_example.md
(+491 files in other folders)
